[package]
name = "rs-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tray-item = "0.8.0"

[dependencies.windows]
version = "0.51"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
]

[build-dependencies]
windres = "*"